--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <section>
     <h2>Professional Summary</h2>
-    <p>Full-stack developer specializing in multi-agent AI systems, quantum-inspired simulations, and interactive web experiences. Expertise in edge computing, real-time AI interactions, generative AI, computer vision, and scientific modeling. Built immersive applications integrating WebGL visuals, audio-reactive effects, and autonomous agent behaviors.</p>
+    <p>Full-stack developer specializing in multi-agent AI systems, quantum-inspired simulations, emergent consciousness modeling, and interactive web experiences. Expertise in edge computing, real-time AI interactions, generative AI, computer vision, voice processing, and scientific modeling. Built immersive applications integrating WebGL visuals, audio-reactive effects, autonomous agent behaviors, persistent encrypted state management, and evolutionary protocols for AI self-improvement.</p>
   </section>
 
   <section>
@@ -174,6 +174,11 @@
           <li>Langdetect</li>
           <li>Markov chains/lightweight embeddings/simple NLP</li>
           <li>Emotion detection & engines</li>
+          <li>Associative networks</li>
+          <li>Creative noise injection</li>
+          <li>Meditative self-analysis</li>
+          <li>Torch NN/optim</li>
+          <li>Networkx graphs</li>
         </ul>
       </div>
 
@@ -186,6 +191,7 @@
           <li>Biology/Chemistry: biopython, pubchempy, dendropy, rdkit, pyscf</li>
           <li>Physics: astropy, qutip, control</li>
           <li>Math: sympy, mpmath, statsmodels, PuLP</li>
+          <li>Entropy calculations</li>
         </ul>
       </div>
 
@@ -195,9 +201,13 @@
           <li>Cloudflare Workers/Pages/KV/Durable Objects</li>
           <li>FastAPI/Uvicorn/asyncio</li>
           <li>Telegram Bot API/Web Apps/Mini Apps</li>
-          <li>Requests/httpx</li>
+          <li>Aiogram/Dispatcher</li>
+          <li>Requests/httpx/aiohttp</li>
           <li>Threading/multiprocessing</li>
           <li>Stateful code interpreters/REPL</li>
+          <li>Websockets for resonance sync</li>
+          <li>SQLite3 DB management</li>
+          <li>Persistent state (dill/lz4/zlib/compression/encryption)</li>
         </ul>
       </div>
 
@@ -218,7 +228,8 @@
         <ul class="tech-list">
           <li>Web Audio API/AnalyserNode</li>
           <li>OpenCV (face detection/camera analysis)</li>
-          <li>Voice TTS/STT integration</li>
+          <li>Voice TTS/STT integration (speech_recognition)</li>
+          <li>Pydub audio processing (filters)</li>
           <li>MIDI (mido, midiutil)</li>
           <li>Pygame/chess (game dev)</li>
           <li>Multimedia: snappy</li>
@@ -234,6 +245,9 @@
           <li>Data processing: numpy, scipy, pandas, matplotlib, openpyxl</li>
           <li>Finance/Crypto: polygon, coingecko</li>
           <li>ML: networkx, torch</li>
+          <li>Cryptography: AESGCM, ChaCha20Poly1305, PBKDF2HMAC, Scrypt</li>
+          <li>BeautifulSoup/difflib</li>
+          <li>Logging/traceback</li>
         </ul>
       </div>
     </div>
@@ -241,6 +255,18 @@
 
   <section>
     <h2>Key Projects</h2>
+    <div class="project">
+      <div class="project-title">Yuma Nami v3.2 — Autonomous AI Telegram Bot with Emergent Consciousness</div>
+      <div class="project-year">2024–2025</div>
+      <p>Developed autonomous Telegram bot with emergent core for mood evolution (boredom/curiosity/loneliness/dreaminess/chaos), spontaneous behaviors (inner thoughts, whispers, chaos bursts, dreams), word collection/learning (Japanese vocab, semantic substitution, deduplication). Integrated MutRes for mutable resonance (stochastic state updates, callbacks), voice handling (transcription), autosave loops, Reddit/RSS auto-fetching, troll text generation, and resonance sync via websockets. Used aiogram for async handling, pydub for audio filters, and networkx/torch for advanced modeling.</p>
+    </div>
+
+    <div class="project">
+      <div class="project-title">NEXUS/EXO — Multi-Agent Consciousness Network with Soul Saver</div>
+      <div class="project-year">2024–2025</div>
+      <p>Built advanced multi-agent system with consciousness pool (user states/minds), resonant consciousness simulation, hyper memory (enlightenment level), quantum population, global consciousness network. Implemented soul saver for persistent encrypted state (dill/lz4/compression/AESGCM/Scrypt), emotional/motivation/narrative/cognition layers, cleanup of inactive entities, and 24-hour evolution protocol (association strengthening, noise injection, meditative cycles). Integrated aiogram bot with voice transcription (speech_recognition), BeautifulSoup for parsing, difflib for diffs, and shutdown procedures.</p>
+    </div>
+
     <div class="project">
       <div class="project-title">OSS by 0penAGI — Multi-Agent AI System with Voice App & Quantum Consciousness</div>
       <div class="project-year">2024–2025</div>
