--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>elliia belokopytova — CV</title>
-  <meta name="description" content="Full-Stack / AI / Multi-Agent Developer | Cloudflare Workers | Quantum-inspired systems | Generative Art & Voice AI">
-  
+  <meta name="description" content="Full-Stack / AI / Multi-Agent Developer | Media Artist | Interactive Installations & Generative Art">
+ 
   <!-- Favicon -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📄</text></svg>">
-  
+ 
   <style>
     :root {
       --bg: #ffffff;
@@ -18,7 +18,6 @@
       --subheader: #555555;
       --accent: #000000;
     }
-
     body {
       background: var(--bg);
       color: var(--text);
@@ -28,51 +27,42 @@
       margin: 0;
       padding: 0;
     }
-
     .container {
       max-width: 900px;
       margin: 0 auto;
       padding: 40px 20px;
     }
-
     header {
       border-bottom: 1px solid var(--border);
       padding-bottom: 20px;
       margin-bottom: 40px;
     }
-
     h1 {
       font-size: 32px;
       margin: 0 0 10px 0;
       font-weight: 700;
       color: var(--header);
     }
-
     .tagline {
       font-size: 18px;
       color: var(--subheader);
       margin: 0 0 20px 0;
     }
-
     .contacts {
       font-size: 14px;
       color: var(--subheader);
       margin: 0;
     }
-
     .contacts a {
       color: var(--accent);
       text-decoration: none;
     }
-
     .contacts a:hover {
       text-decoration: underline;
     }
-
     section {
       margin-bottom: 40px;
     }
-
     h2 {
       font-size: 24px;
       font-weight: 600;
@@ -81,49 +71,40 @@
       padding-bottom: 10px;
       margin-bottom: 20px;
     }
-
     h3 {
       font-size: 18px;
       font-weight: 600;
       margin: 20px 0 10px 0;
     }
-
     ul {
       list-style-type: disc;
       margin-left: 20px;
     }
-
     .skills-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
     }
-
     .skills-grid div {
       border: 1px solid var(--border);
       padding: 15px;
     }
-
     .project {
       margin-bottom: 30px;
     }
-
     .project-title {
       font-size: 18px;
       font-weight: 600;
     }
-
     .project-year {
       font-size: 14px;
       color: var(--subheader);
       margin-bottom: 10px;
     }
-
     .tech-list {
       font-size: 14px;
       color: var(--subheader);
     }
-
     footer {
       text-align: center;
       font-size: 14px;
@@ -132,35 +113,31 @@
       padding-top: 20px;
       margin-top: 40px;
     }
-
     @media print {
       body { font-size: 12pt; }
       .container { padding: 0; }
       a { text-decoration: none; color: var(--text); }
     }
-
     @media (max-width: 600px) {
       .skills-grid { grid-template-columns: 1fr; }
     }
   </style>
 </head>
 <body>
-
 <div class="container">
-
   <header>
     <h1>elliia belokopytova</h1>
-    <div class="tagline">Full-Stack / AI / Multi-Agent Developer • Cloudflare Workers & Edge Computing Specialist</div>
+    <div class="tagline">Full-Stack / AI / Multi-Agent Developer • Media Artist • Interactive Installations & Generative Art Specialist</div>
     <div class="contacts">
       Bangkok, Thailand • <a href="https://t.me/star_path_loop">Telegram @star_path_loop</a> • <a href="mailto:thedubsty@gmail.com">thedubsty@gmail.com</a> • <a href="https://github.com/0penAGI">github.com/0penAGI</a>
     </div>
   </header>
-
+  
   <section>
     <h2>Professional Summary</h2>
-    <p>Full-stack developer specializing in multi-agent AI systems, quantum-inspired simulations, emergent consciousness modeling, and interactive web experiences. Expertise in edge computing, real-time AI interactions, generative AI, computer vision, voice processing, and scientific modeling. Built immersive applications integrating WebGL visuals, audio-reactive effects, autonomous agent behaviors, persistent encrypted state management, and evolutionary protocols for AI self-improvement.</p>
+    <p>Full-stack developer and media artist specializing in multi-agent AI systems, quantum-inspired simulations, emergent consciousness modeling, and interactive installations. Expertise in edge computing, real-time AI interactions, generative AI, computer vision, voice processing, scientific modeling, and large-scale immersive experiences. Built interactive installations for major museums and festivals, integrating WebGL visuals, audio-reactive effects, custom tracking systems, autonomous agent behaviors, persistent encrypted state management, and evolutionary protocols for AI self-improvement.</p>
   </section>
-
+  
   <section>
     <h2>Core Technical Skills</h2>
     <div class="skills-grid">
@@ -181,7 +158,6 @@
           <li>Networkx graphs</li>
         </ul>
       </div>
-
       <div>
         <h3>Scientific Computing</h3>
         <ul class="tech-list">
@@ -194,7 +170,6 @@
           <li>Entropy calculations</li>
         </ul>
       </div>
-
       <div>
         <h3>Backend/Serverless</h3>
         <ul class="tech-list">
@@ -210,7 +185,6 @@
           <li>Persistent state (dill/lz4/zlib/compression/encryption)</li>
         </ul>
       </div>
-
       <div>
         <h3>Frontend/Interactive</h3>
         <ul class="tech-list">
@@ -222,7 +196,6 @@
           <li>Prism.js code highlighting</li>
         </ul>
       </div>
-
       <div>
         <h3>Multimedia & CV</h3>
         <ul class="tech-list">
@@ -235,7 +208,19 @@
           <li>Multimedia: snappy</li>
         </ul>
       </div>
-
+      <div>
+        <h3>Media Art & Installations</h3>
+        <ul class="tech-list">
+          <li>Large-scale interactive installations</li>
+          <li>Custom tracking systems for theatre</li>
+          <li>VJ performance & live visuals</li>
+          <li>Museum exhibition design</li>
+          <li>Generative art systems</li>
+          <li>Projection mapping</li>
+          <li>Real-time audience interaction</li>
+          <li>Audio-reactive environments</li>
+        </ul>
+      </div>
       <div>
         <h3>Other Tools</h3>
         <ul class="tech-list">
@@ -252,55 +237,83 @@
       </div>
     </div>
   </section>
-
+  
   <section>
-    <h2>Key Projects</h2>
+    <h2>Media Art & Interactive Installations</h2>
+    <div class="project">
+      <div class="project-title">International Exhibition "Russia" — Interactive Installation for VK</div>
+      <div class="project-year">2024</div>
+      <p>Developed large-scale interactive installation for VK at major international exhibition. Collaborated with Smart Light to create immersive digital experience integrating real-time user interaction and generative visuals.</p>
+    </div>
+    <div class="project">
+      <div class="project-title">Museum of Nuclear Power (ATOM) — Interactive Installations for Rosatom</div>
+      <div class="project-year">2024</div>
+      <p>Created multiple interactive installations for Museum of Nuclear Power on VDNH for Rosatom. Worked with RadugaDesign to deliver educational and engaging experiences explaining nuclear technology through interactive media.</p>
+    </div>
+    <div class="project">
+      <div class="project-title">IceCastle Interactive Installation — Sberbank in Mountain Altai</div>
+      <div class="project-year">2024</div>
+      <p>Designed and implemented interactive installation for Sberbank at Manzherok resort in the Republic of Mountain Altai. Collaborated with Smart Light to create immersive experience integrated with natural ice architecture.</p>
+    </div>
+    <div class="project">
+      <div class="project-title">Mars Museum & Roscosmos — Interactive Installations</div>
+      <div class="project-year">2023–2024</div>
+      <p>Freelance developer for multiple interactive installations at Mars Museum and Roscosmos. Created educational space-themed experiences combining generative visuals and user interaction.</p>
+    </div>
+    <div class="project">
+      <div class="project-title">Outline Festival — Generative Art & VJ Performance</div>
+      <div class="project-year">2023</div>
+      <p>Performed as VJ and created generative art for main stage at Outline festival. Collaborated with Sila Sveta and SETUP to deliver live audio-reactive visuals for large-scale outdoor event.</p>
+    </div>
+    <div class="project">
+      <div class="project-title">Theatre Sovremennik — Custom Tracking System</div>
+      <div class="project-year">2023</div>
+      <p>Developed custom tracking system for Theatre Sovremennik in collaboration with Smart Light. Created real-time performance tracking and interactive visual elements for theatrical productions.</p>
+    </div>
+  </section>
+  
+  <section>
+    <h2>Software Development Projects</h2>
     <div class="project">
       <div class="project-title">Yuma Nami v3.2 — Autonomous AI Telegram Bot with Emergent Consciousness</div>
       <div class="project-year">2024–2025</div>
       <p>Developed autonomous Telegram bot with emergent core for mood evolution (boredom/curiosity/loneliness/dreaminess/chaos), spontaneous behaviors (inner thoughts, whispers, chaos bursts, dreams), word collection/learning (Japanese vocab, semantic substitution, deduplication). Integrated MutRes for mutable resonance (stochastic state updates, callbacks), voice handling (transcription), autosave loops, Reddit/RSS auto-fetching, troll text generation, and resonance sync via websockets. Used aiogram for async handling, pydub for audio filters, and networkx/torch for advanced modeling.</p>
     </div>
-
     <div class="project">
       <div class="project-title">NEXUS/EXO — Multi-Agent Consciousness Network with Soul Saver</div>
       <div class="project-year">2024–2025</div>
       <p>Built advanced multi-agent system with consciousness pool (user states/minds), resonant consciousness simulation, hyper memory (enlightenment level), quantum population, global consciousness network. Implemented soul saver for persistent encrypted state (dill/lz4/compression/AESGCM/Scrypt), emotional/motivation/narrative/cognition layers, cleanup of inactive entities, and 24-hour evolution protocol (association strengthening, noise injection, meditative cycles). Integrated aiogram bot with voice transcription (speech_recognition), BeautifulSoup for parsing, difflib for diffs, and shutdown procedures.</p>
     </div>
-
     <div class="project">
       <div class="project-title">OSS by 0penAGI — Multi-Agent AI System with Voice App & Quantum Consciousness</div>
       <div class="project-year">2024–2025</div>
       <p>Developed autonomous multi-agent swarm with genetic traits (decision styles, memory policies, reproduction), empathy layers (sensitivity/mirroring/compassion), and quantum background (stochastic fields/resonance using NumPy/SciPy). Implemented consciousness pulse aggregator linking agent attractors (curiosity/social/stability) to quantum simulations (Pauli matrices/Hamiltonians/entanglement). Built FastAPI backend for Telegram Mini App: real-time voice interactions, camera frame analysis (OpenCV face detection), image generation (Stable Diffusion on CPU/GPU/MPS), and autonomous thought loops. Created interactive frontend: WebGL/THREE.js background, swipe-chat panel with typing/glitch animations, glassmorphism UI, and orb element for empathetic responses. Integrated Ollama for AI harmony queries, emotion detection/updates, and memory management (episodic/ancestral). Handled async tasks: Uvicorn server, polling, soul keeper, and lifecycle management for emergent behaviors.</p>
     </div>
-
     <div class="project">
       <div class="project-title">HINTS MUSIC — Interactive Music Label Telegram Mini App + Bot Ecosystem</div>
       <div class="project-year">2024–2025</div>
       <p>Engineered audio-reactive web experience in Telegram Web App with WebGL shaders (bass-reactive distortion/lens effects/pink aesthetic). Designed custom vinyl animations (CSS masks/radial gradients), grain/noise post-processing (WebGL), and immersive idle/particle modes. Built Telegram Bot + Cloudflare Worker backend: real-time tracking, $HINT coin economy (10 coins/min + bonuses), promo codes/easter eggs/tiered discounts. Implemented user stats/leaderboards/legendary status, mini-AI chatbot (context memory/embeddings/Markov chains).</p>
     </div>
-
     <div class="project">
       <div class="project-title">Other Projects / Experiments</div>
       <div class="project-year">Selected</div>
       <p>Generative art & audio-visualizers (WebGL + Web Audio/OpenCV). Telegram trading/clicker games with real-time economies and agent swarms. Edge-based analytics/user tracking with quantum-inspired randomness. Custom GLSL shader playgrounds (distortion/flow fields/fractal noise) and AI-driven image synthesis.</p>
     </div>
   </section>
-
+  
   <section>
     <h2>Education</h2>
-    <p>Self-taught / Bootcamps / Online intensive courses (focus: advanced AI/multi-agent systems, quantum computing, creative coding, serverless architectures)</p>
+    <p>Self-taught / Bootcamps / Online intensive courses (focus: advanced AI/multi-agent systems, quantum computing, creative coding, serverless architectures, media art & interactive installations)</p>
   </section>
-
+  
   <section>
     <h2>Languages</h2>
     <p>Russian — Native<br>English — Upper-Intermediate / Professional working proficiency (C1)</p>
   </section>
-
+  
   <footer>
     <p>Available for full-time / contract / freelance • Open to relocation / remote</p>
   </footer>
-
 </div>
-
 </body>
 </html>
