--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   
   <section>
     <h2>Education</h2>
-    <p>Self-taught / Bootcamps / Online intensive courses (focus: advanced AI/multi-agent systems, quantum computing, creative coding, serverless architectures, media art & interactive installations)</p>
+    <p>Self-taught / Bootcamps / Online intensive (focus: advanced AI/multi-agent systems, quantum computing, creative coding, serverless architectures, media art & interactive installations)</p>
   </section>
   
   <section>
